Added function for encrypting identifiable data.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: daohtools
-Title: What the Package Does (One Line, Title Case)
+Title: Tools for working with registry data and transforming to days alive and out of hospital (DAOH)
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Matthew",
            family = "Moore",
            role = c("aut", "cre"),
            email = "matthew.moore@auckland.ac.nz")
-Description: What the package does (one paragraph).
+Description: Like just heaps of stuff.
 License: MIT
 Encoding: UTF-8
 LazyData: true
@@ -15,5 +15,6 @@ Depends:
 Imports: 
   data.table (>= 1.12.0),
   ggplot2 (>= 3.1.0),
-  fasttime (>= 1.0.2)
-RoxygenNote: 6.1.1
+  fasttime (>= 1.0.2),
+  safer (>= 0.2.1)
+RoxygenNote: 7.0.2
