--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,10 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 Depends: 
-  data.table (>= 1.12.0)
+  data.table (>= 1.12.0),
+  ggplot2 (>= 3.1.0)
 Imports: 
   data.table (>= 1.12.0),
-  ggplot2 (>= 3.1.0),
   fasttime (>= 1.0.2),
   safer (>= 0.2.1)
 RoxygenNote: 7.0.2
