Honed encryption. Set junkpaths to true, test encryption after each column to ensure the change can be reversed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(calculate.dih)
 export(consolidate.events)
 export(convert.date.cols)
 export(convert.date.cols.fasttime)
+export(decrypt.col)
 export(detect.overlapping.events)
 export(encrypt.col)
 export(generate.all.site.tsds)
