Tried to add automatic detection of date columns in convert

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calculate.dd)
 export(calculate.dih)
 export(consolidate.events)
 export(convert.date.cols)
+export(convert.date.cols.auto)
 export(convert.date.cols.fasttime)
 export(detect.overlapping.events)
 export(encrypt.col)
