--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(convert.date.cols.fasttime)
 export(detect.overlapping.events)
 export(encrypt.col)
 export(generate.all.site.tsds)
+export(generate.quantreg.model)
 export(generate.site.tsd)
 export(generate.smoothed.sampling.dist)
 export(generate.timed.sampling.dist)
@@ -23,4 +24,6 @@ export(plot.distribution)
 export(prune.events.to.period)
 export(quantile.dist)
 export(quantile.dist.emp)
+export(risk.adjust.on.quantreg.model)
+export(risk.adjust.quantreg)
 export(smooth.daoh)
