--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(bezierCurve)
 export(calculate.daoh)
 export(calculate.dd)
 export(calculate.dih)
+export(calculate.dra.risk.adjustment.glm)
+export(calculate.dra.weights)
 export(consolidate.events)
 export(convert.date.cols)
 export(convert.date.cols.auto)
@@ -11,7 +13,9 @@ export(convert.date.cols.fasttime)
 export(detect.overlapping.events)
 export(encrypt.col)
 export(generate.all.site.tsds)
+export(generate.dra.riskgp.columns)
 export(generate.quantreg.model)
+export(generate.riskgp.vector)
 export(generate.site.tsd)
 export(generate.smoothed.sampling.dist)
 export(generate.timed.sampling.dist)
@@ -27,3 +31,4 @@ export(quantile.dist.emp)
 export(risk.adjust.on.quantreg.model)
 export(risk.adjust.quantreg)
 export(smooth.daoh)
+export(std.err)
