--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calculate.dd)
 export(calculate.dih)
 export(calculate.dra.risk.adjustment.glm)
 export(calculate.dra.weights)
+export(calculate.summary.dt)
 export(consolidate.events)
 export(convert.date.cols)
 export(convert.date.cols.auto)
@@ -22,10 +23,10 @@ export(generate.timed.sampling.dist)
 export(merge.and.crop.events)
 export(modify.daoh.distribution)
 export(modify.timed.daoh.distribution)
+export(plot.daoh.barplot)
 export(plot.daoh.density)
 export(plot.daoh.freqpoly)
 export(plot.daoh.histogram)
-export(plot.distribution)
 export(prune.events.to.period)
 export(quantile.dist)
 export(quantile.dist.emp)
